--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint": "eslint . --ext .js,.ts,.tsx --max-warnings 0",
     "format": "prettier --write .",
     "tsc": "tsc -p tsconfig.json --noEmit",
-    "deploy": "npm run build && gh-pages -d dist",
-    "prepare": "husky install"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "keywords": [
     "React",
@@ -55,7 +54,6 @@
     "favicons": "^7.0.1",
     "gh-pages": "^4.0.0",
     "http-server": "^14.1.1",
-    "husky": "^7.0.4",
     "prettier": "^2.3.2",
     "typescript": "^4.5.4",
     "vite": "^3.1.8",
